streamlining some layout issues

--- a/podiobooks/themes/pb2-jq/static/css/donate.css
+++ b/podiobooks/themes/pb2-jq/static/css/donate.css
@@ -1,10 +1,7 @@
 .donate .two-col{
 	text-align: center;
 	margin:0 0 2em;
-	
-	
 }
-
 .donate h1{
 	text-align: center;
 }
@@ -12,8 +9,4 @@
 .donate .two-col img{
 	height:180px;
 	margin:1em 0;
-}
-
-.donate .pg-foot{
-
 }
